k8/billing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deployment
  labels:
    app: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: dockermau/beer-billing:1.0
        ports:
        - containerPort: 8083
