k8/waiter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waiter-deployment
  labels:
    app: waiter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: waiter
  template:
    metadata:
      labels:
        app: waiter
    spec:
      containers:
      - name: waiter
        image: dockermau/beer-waiter:1.0
        ports:
        - containerPort: 8082
