k8/zipkin-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin-deployment
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    app: zipkin
  sessionAffinity: None
  type: NodePort
