k8/billing-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: billing-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
        - path: /billing
          backend:
            serviceName: billing-deployment
            servicePort: 8083
